--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <!-- App css -->
   <link href="assets/css/core.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/components.css" rel="stylesheet" type="text/css" />
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.083b3c989465c3e498c9.css"></head>
+<link rel="stylesheet" href="styles.b03f2326da9449d66653.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="scripts.e2cc764d74d6cb8d1c42.js"></script><script type="text/javascript" src="main.892727a8d8a0eda5f171.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="scripts.e2cc764d74d6cb8d1c42.js"></script><script type="text/javascript" src="main.d36b87d0006acbd812e1.js"></script></body>
 </html>
