--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <!-- App css -->
   <link href="assets/css/core.css" rel="stylesheet" type="text/css" />
@@ -21,5 +21,5 @@
 <link rel="stylesheet" href="styles.22850d3ad1cdca60c26d.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.2f386a1121aec8f9c8e3.js"></script><script type="text/javascript" src="scripts.e5bd1fdaed40ba52f485.js"></script><script type="text/javascript" src="main.b09616a0eccfc2b84e1f.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.2f386a1121aec8f9c8e3.js"></script><script type="text/javascript" src="scripts.e5bd1fdaed40ba52f485.js"></script><script type="text/javascript" src="main.aaf4b496bf9c665cc3b8.js"></script></body>
 </html>
