--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <link href="assets/css/core.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/components.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/pages.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/menu.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.c0abfc2ea7b3d372e93b.css"></head>
+<link rel="stylesheet" href="styles.f48ee30f4468a297447a.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.2f386a1121aec8f9c8e3.js"></script><script type="text/javascript" src="scripts.e5bd1fdaed40ba52f485.js"></script><script type="text/javascript" src="main.a83872176372315e36a1.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.2f386a1121aec8f9c8e3.js"></script><script type="text/javascript" src="scripts.e5bd1fdaed40ba52f485.js"></script><script type="text/javascript" src="vendor.35c45145e3a52a87340c.js"></script><script type="text/javascript" src="main.33995b82bb00b490c7e6.js"></script></body>
 </html>
